spacing issues

--- a/About Page/about.css
+++ b/About Page/about.css
@@ -43,12 +43,13 @@ main {
     color:white;
     font-size: 45px;
     height: 800px;
-    display:flex;
+    /* display:flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-evenly; */
     align-items: center;
     font-family: 'Do Hyeon', sans-serif;
     text-align: center;
+    line-height: 300%
 }
 
 p {
@@ -77,7 +78,8 @@ p {
 
     main {
         text-align: center;
-        margin-right: 10%;
-        margin-left: 15%;
+        margin-right: 0%;
+        margin-left: 8%;
+        line-height: 100%
     }
 }
